readme (docs): add .env example

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,3 +7,10 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+.pre {
+  font-family: monospace;
+  background-color: #d3d3d3;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
+}
