styles (feat): add default reponsiveness css rules

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,2 +1,22 @@
 /* Write your global styles here, in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+}
 
+html {
+  /* 1rem = 10px */
+  font-size: 62.5%;
+}
+
+html,
+body {
+  text-rendering: optimizelegibility;
+  -webkit-font-smoothing: antialiased;
+}
+
+body {
+  font-size: 1.6rem;
+}
